--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -9,4 +9,8 @@
     <p><a href="~/Gadata/WebGrid" class="btn btn-primary btn-large">GadataWebGrid &raquo;</a></p>
     <p><a href="~/Gadata/jqGrid" class="btn btn-primary btn-large">GadatajqGrid &raquo;</a></p>
     <p><a href="~/Maximo/WojqGrid" class="btn btn-primary btn-large">MaximoWojqGrid &raquo;</a></p>
+    <p><a href="~/Gadata/DiffWebgrid" class="btn btn-primary btn-danger">GadatajqGrid &raquo;</a></p>
+    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">MaximoWojqGrid &raquo;</a></p>
+
+   
 </div>
