bugfix in setting trackbars and made a catch

--- a/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
@@ -88,5 +88,5 @@ content = "width=device-width"/>
                     nextText: "Next >",
                     lastText: "Last >>",
                      columns: ViewBag.Columns
-        )
-    ) </div></body></html>  
+        ) 
+</div></body></html>  
