--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -5,12 +5,11 @@
 <div class="jumbotron">
     <h1>Hellow</h1>
     <p class="lead">VCG GA UB12 Homepage</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-    <p><a href="~/Gadata/WebGrid" class="btn btn-primary btn-large">GadataWebGrid &raquo;</a></p>
-    <p><a href="~/Gadata/jqGrid" class="btn btn-primary btn-large">GadatajqGrid &raquo;</a></p>
-    <p><a href="~/Maximo/WojqGrid" class="btn btn-primary btn-large">MaximoWojqGrid &raquo;</a></p>
-    <p><a href="~/Gadata/DiffWebgrid" class="btn btn-primary btn-danger">GadatajqGrid &raquo;</a></p>
-    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">MaximoWojqGrid &raquo;</a></p>
+    <p><a href="~/Gadata/WebGrid" class="btn btn-primary btn-large">GadataWebGrid_Test &raquo;</a></p>
+    <p><a href="~/Gadata/jqGrid" class="btn btn-primary btn-large">GadatajqGrid_Test &raquo;</a></p>
 
+    
+    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">DynamicGadataGrid &raquo;</a></p>
+    <p><a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a></p>
    
 </div>
