--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <p class="lead">VCG GA UB12 Homepage</p>
     <p><a href="~/Gadata/WebGrid" class="btn btn-primary btn-large">GadataWebGrid_Test &raquo;</a></p>
     <p><a href="~/Gadata/jqGrid" class="btn btn-primary btn-large">GadatajqGrid_Test &raquo;</a></p>
+    <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-large">Ploegrapport_Test &raquo;</a></p>
 
     
     <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">DynamicGadataGrid &raquo;</a></p>
