--- a/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
@@ -9,8 +9,6 @@ content = "width=device-width"/>
 <title> DisplayGrid  </title>  
 
 <link href="https://code.jquery.com/ui/1.12.0-rc.2/themes/smoothness/jquery-ui.css" rel="stylesheet" />
-<script src = "~/Scripts/jquery-1.9.1.js" > </script> 
-<script src = "~/bootstrap-3.3.6-dist/js/bootstrap.js"> </script>
 
 <style type = "text/css" >
     .mainpanel
@@ -35,25 +33,83 @@ content = "width=device-width"/>
     font-weight: normal;
 }
 </style>
+@*script for setting row colors based on there values*@
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () { 
+            $('#gridMapping > tbody > tr').each(function (index) {
+                if (($(this).children('td:nth-child(3)').text() < 60) && ($(this).children('td:nth-child(3)').text() > 80))
+                 { $(this).children('td').css("background-color", "#33CC99");}
+                else if ($(this).children('td:nth-child(3)').text() < 36 )
+                 { $(this).children('td').css("background-color", "#FFCC99");}
+                else
+                 { }
+            });
+        });
+    </script>
 
+@*scrip for blinking a row based on there value.*@
+    <script type="text/javascript">
+    $(document).ready(function () {
+        $(function () {
+            setInterval(flashRow, 750);
+        });
+        var bFlip = new Boolean(false);
+        function flashRow() {
+            bFlip = !bFlip;
+            $('#gridMapping > tbody > tr').each(function (index) {
+                if ($(this).children('td:nth-child(3)').text() == 49)
+                {
+                    if (bFlip) {
+                        $(this).children('td').css("background-color", "#33CC99");
+                    } else {
+                        $(this).children('td').css("background-color", "#FFCC99");
+                    }
+                }
+            });
+        }
+    });
+    </script>
+
+@*scrip for playing sound based on row value.*@
+@*http://soundbible.com/grab.php?id=1252&type=mp3*@
+@*http://soundbible.com/grab.php?id=1377&type=mp3*@
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#gridMapping > tbody > tr').each(function (index) {
-            if ($(this).children('td:nth-child(1)').text() == "Done") {
-                $(this).children('td:nth-child(1)').css("background-color", "#33CC99");
-            } else {
-                $(this).children('td:nth-child(1)').css("background-color", "#FFCC99");
-            }
+        $(function () {
+            CheckSound();
+            setInterval(CheckSound, 1000*60);
         });
+        var bNeedToPlay = new Boolean(false);
+        var sound = new Audio(src = "http://soundbible.com/grab.php?id=1377&type=mp3");
+        function CheckSound() {
+            bNeedToPlay = false;
+            $('#gridMapping > tbody > tr').each(function (index) {
+                if ($(this).children('td:nth-child(3)').text() == 31) {
+                    bNeedToPlay = true;
+                }
+            });
+            if (bNeedToPlay)
+            {
+                sound.play();
+            }
+        }
     });
 </script>
 
+
+
+
+
+@*stype for mouse hover color complete row *@
 <style type = "text/css" >/*Mouse hover*/
     #gridMapping tr:hover
     {
         background-color: #F5DEB3;
     } </style>
 
+
+@*main body*@
 </head><body><div>
                  @{
                      ViewBag.Title = "Dynamic Gridview";
