--- a/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/DynamicWebgrid.cshtml
@@ -33,6 +33,7 @@ content = "width=device-width"/>
     font-weight: normal;
 }
 </style>
+
 @*script for setting row colors based on there values*@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script type="text/javascript">
@@ -58,7 +59,7 @@ content = "width=device-width"/>
         function flashRow() {
             bFlip = !bFlip;
             $('#gridMapping > tbody > tr').each(function (index) {
-                if ($(this).children('td:nth-child(3)').text() == 49)
+                if ($(this).children('td:nth-child(3)').text() > 35)
                 {
                     if (bFlip) {
                         $(this).children('td').css("background-color", "#33CC99");
@@ -87,7 +88,7 @@ content = "width=device-width"/>
         function CheckSound() {
             bNeedToPlay = false;
             $('#gridMapping > tbody > tr').each(function (index) {
-                if ($(this).children('td:nth-child(3)').text() == 31) {
+                if ($(this).children('td:nth-child(3)').text() == 40) {
                     bNeedToPlay = true;
                 }
             });
@@ -106,24 +107,34 @@ content = "width=device-width"/>
             //check every 5 seconds 
             setInterval(CheckForData, 1000 * 5);
         });
+        //interlock for ajax request
+        var bInterlock = new Boolean();
+        bInterlock = false;
 
         function CheckForData() {
-            $.ajax({
-                async: true,
-                type: 'GET',
-                url: '@Url.Action("checkNewData")',
-                dataType: 'json',
+            if (bInterlock) {
+                return;
+            } else {
+                bInterlock = true;
+            }
+                    $.ajax({
+                        async: true,
+                        type: 'GET',
+                        url: '@Url.Action("checkNewData")',
+                        dataType: 'json',
 
-                success: function (response) {
-                    //succes = reload needed 
-                    //could pass data in json object to handle reload smarter
-                    window.location.reload();
-                },
+                        success: function (response) {
+                            bInterlock = false;
+                            //succes = reload needed 
+                            window.location.reload();
+                        },
 
-                error: function (ex) {
-                    //error = no reload
-                }
-            });
+                        error: function (ex) {
+                            bInterlock = false;
+                            //error = no reload
+                        }
+                    });
+
         }
     });
 </script>
@@ -134,7 +145,6 @@ content = "width=device-width"/>
     {
         background-color: #F5DEB3;
     } </style>
-
 
 @*main body*@
 </head><body><div>
