implementing new reports

--- a/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
@@ -124,7 +124,7 @@ content = "width=device-width"/>
                     $.ajax({
                         async: true,
                         type: 'GET',
-                        url: '@Url.Action("PloegRapportcheckNewData")',
+                        url: '@Url.Action("SupervisiecheckNewData")',
                         dataType: 'json',
                         data: { dataTimestamp: Datatimestamp },
 
