--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -13,3 +13,5 @@
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">sam.de.beul@volvocars.com</a><br />
 </address>
+
+<p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a></p>
