added a modal popup (still some bugs)

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -5,12 +5,8 @@
 <div class="jumbotron">
     <h1>Hellow</h1>
     <p class="lead">VCG GA UB12 Homepage</p>
-    <p><a href="~/Gadata/WebGrid" class="btn btn-primary btn-large">GadataWebGrid_Test &raquo;</a></p>
-    <p><a href="~/Gadata/jqGrid" class="btn btn-primary btn-large">GadatajqGrid_Test &raquo;</a></p>
-    <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-large">Ploegrapport_Test &raquo;</a></p>
 
-    
-    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">DynamicGadataGrid &raquo;</a></p>
+    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">DynamicGadataGrid(Tipstatus) &raquo;</a></p>
 
     <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a></p>
     <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie &raquo;</a></p>
