--- a/EqUiWebUi/Views/Difftable/Index.cshtml
+++ b/EqUiWebUi/Views/Difftable/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@model EqUiWebUi.Models.DiffQuery
 
-@{
-    ViewBag.Title = "Index";
-}
-<h2>Begin Form</h2>
 <script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+<script src="~/Scripts/gridmvc.min.js"></script>
+
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/Gridmvc.css" rel="stylesheet" />
+
+@*set title*@
+@{
+    ViewBag.Title = "Query differ";
+}
 @*script that fill hsnapshot listbox when users selects a c_snapshot instance*@
 <script type="text/javascript">
     $(document).ready(function () {
@@ -16,9 +22,13 @@
                 data: { id: $("#SelectedQuery").val() },
 
                 success: function (snapshots) {
+                    console.log("hit");
+                    $('#SelectedSnapshotID1').empty()
                     $.each(snapshots, function (i, item) {
                         $("#SelectedSnapshotID1").append('<option value="' + item.Value + '">' + item.Text + '</option>');
                     });
+
+                    $("#SelectedSnapshotID2").empty();
                     $.each(snapshots, function (i, item) {
                         $("#SelectedSnapshotID2").append('<option value="' + item.Value + '">' + item.Text + '</option>');
                     });
@@ -33,29 +43,20 @@
     });
 </script>
 
-
-@using (Html.BeginForm())
-{
+@*content *@
 <br />
-@Html.Label("Snapshot=>")
-@Html.DropDownListFor(m => m.SelectedQuery, new SelectList(Model.c_querySnapshots, "id", "name"), "--select a snapshot")
-<br />
-@Html.Label("Compare=>")
-@Html.DropDownListFor(m => m.SelectedSnapshotID1, new SelectList(string.Empty, "Value", "Text"), "--Instance of snapshot")
-<br />
-@Html.Label("______To=>")
-    @Html.DropDownListFor(m => m.SelectedSnapshotID2, new SelectList(string.Empty, "Value", "Text"), "--Instance of snapshot")
-<br />
-
-<h2>Textbox area</h2>
-@Html.TextAreaFor(m => m.c_querySnapshots[0].query, 10, 20,
-    new
-        {
-        style = "background-color:Gray;"
-        })
-
-
-@Html.Hidden("id","this is a hidden field")
-<p><input type="submit" value="Show diff>>" /></p>
-}
+<div class="modal-content">
+    <br />
+    @using (Html.BeginForm())
+    {
+        @Html.Label("Snapshot")
+        @Html.DropDownListFor(m => m.SelectedQuery, new SelectList(Model.c_querySnapshots, "id", "name"), "select a snapshot")
+        @Html.Label("Compare")
+        @Html.DropDownListFor(m => m.SelectedSnapshotID1, new SelectList(string.Empty, "Value", "Text"), "Instance of snapshot")
+        @Html.Label("To")
+        @Html.DropDownListFor(m => m.SelectedSnapshotID2, new SelectList(string.Empty, "Value", "Text"), "Instance of snapshot")
+        <input type="submit" value="Show diff>>" />
+    }
+    <br />
+</div>
 
