--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
     <h1>Hellow</h1>
     <p class="lead">VCG GA UB12 Homepage</p>
 
-    <p><a href="~/Gadata/DynamicWebgrid" class="btn btn-primary btn-sm">DynamicGadataGrid(Tipstatus) &raquo;</a></p>
-
+    <p><a href="~/Gadata/TipstatusWebgrid" class="btn btn-primary btn-sm">Tipstatus &raquo;</a></p>
     <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a></p>
     <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie &raquo;</a></p>
     <p><a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a></p>
+    <p><a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a></p>
    
 </div>
