minor bug fixes shiftbook sbcustats ...

--- a/EqUiWebUi/Views/Difftable/DiffWebgrid.cshtml
+++ b/EqUiWebUi/Views/Difftable/DiffWebgrid.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 <script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 <script src="~/Scripts/gridmvc.min.js"></script>
@@ -17,7 +18,7 @@
     ins
     {
             background-color: #cfc;
-            text-decoration: none;
+           /*text-decoration: none;*/
     }
 
     del
