--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -23,6 +23,18 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">VSTO toolkit <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a></li>
+                            <li class="divider"></li>
+                            <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_QualityOnLocation">Maximo PQAGEO</a></li>
+                            <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_workordersOnLocation">Maximo Workorders</a></li>
+                            <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_PartsOnLocation">Maximo Parts used</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
         </div>
