--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -32,6 +32,8 @@
                             <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_QualityOnLocation">Maximo PQAGEO</a></li>
                             <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_workordersOnLocation">Maximo Workorders</a></li>
                             <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=MaximoTool&Viewmode=vm_PartsOnLocation">Maximo Parts used</a></li>
+                            <li class="divider"></li>
+                            <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=sleepBlock">Block autologoff</a></li>
                         </ul>
                     </li>
 
