changed asset link to SP on GADATA

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <p><a href="~/Gadata/TipstatusWebgrid" class="btn btn-primary btn-sm">Tipstatus &raquo;</a></p>
     <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a></p>
     <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie &raquo;</a></p>
+    <p><a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a></p>
     <p><a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a></p>
     <p><a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a></p>
    
